mejorando el nginx

--- a/templates/parcels/parcels-dashboard.html
+++ b/templates/parcels/parcels-dashboard.html
@@ -7,7 +7,8 @@
     <title>Mapa 3D Cesium - AgroTech</title>
     <!-- Estilos de Cesium -->
     
-    <link href="https://cesium.com/downloads/cesiumjs/releases/1.102/Build/Cesium/Widgets/widgets.css" rel="stylesheet" type="text/css" />
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.118/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.118/Build/Cesium/Cesium.js"></script>
     <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="../../css/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="../../css/app.min.css" rel="stylesheet" type="text/css" />
