--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/app.min.css/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/static/css/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="/static/css/app.min.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/static/assets/images/favicon.ico">
