agregando docke y configurando

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link href="../../css/app.min.css/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/icons.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/app.min.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="/static/assets/images/favicon.ico">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/app.min.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
     <!-- Custom responsive styles -->
@@ -482,7 +482,7 @@
 
                             <div class="activity-info">
                                 <div class="icon-info-activity">
-                                    <img src="/static/images/users/user-5.jpg" alt="" class="rounded-circle thumb-sm">
+                                    <img src="../../images/users/user-5.jpg" alt="" class="rounded-circle thumb-sm">
                                 </div>
                                 <div class="activity-info-text">
                                     <div class="d-flex justify-content-between align-items-center">
@@ -523,7 +523,7 @@
                             </div>
                             <div class="activity-info">
                                 <div class="icon-info-activity">
-                                    <img src="/static/images/users/user-4.jpg" alt="" class="rounded-circle thumb-sm">
+                                    <img src="../../images/users/user-4.jpg" alt="" class="rounded-circle thumb-sm">
                                 </div>
                                 <div class="activity-info-text">
                                     <div class="d-flex justify-content-between align-items-center">
@@ -568,7 +568,7 @@
                                 <tr>
                                     <td>
                                         <div class="media">
-                                            <img src="/static/images/users/user-1.jpg" alt=""
+                                            <img src="../../images/users/user-1.jpg" alt=""
                                                 class="thumb-sm rounded-circle me-2">
                                             <div class="media-body align-self-center text-truncate">
                                                 <h6 class="mt-0 mb-1 text-dark">Donald Gardner</h6>
@@ -610,7 +610,7 @@
                                 <tr>
                                     <td>
                                         <div class="media">
-                                            <img src="/static/images/users/user-4.jpg" alt=""
+                                            <img src="../../images/users/user-4.jpg" alt=""
                                                 class="thumb-sm rounded-circle me-2">
                                             <div class="media-body align-self-center text-truncate">
                                                 <h6 class="mt-0 mb-1 text-dark">Paula Anderson</h6>
@@ -631,7 +631,7 @@
                                 <tr>
                                     <td>
                                         <div class="media">
-                                            <img src="/static/images/users/user-3.jpg" alt=""
+                                            <img src="../../images/users/user-3.jpg" alt=""
                                                 class="thumb-sm rounded-circle me-2">
                                             <div class="media-body align-self-center text-truncate">
                                                 <h6 class="mt-0 mb-1 text-dark">Lucy Peterson</h6>
