--- a/templates/vertical_base.html
+++ b/templates/vertical_base.html
@@ -364,7 +364,7 @@
         const components = {
             "page-content": "/templates/dashboard.html",
             "footer-container": "/templates/partials/footer.html",
-            "left-sidebar": "/templates/partials/left-sidebar.html",
+            "left-sidebar": "../templates/partials/left-sidebar.html",
             "vendorjs": "/templates/partials/vendorjs.html"
         };
         
