--- a/templates/vertical_base.html
+++ b/templates/vertical_base.html
@@ -448,5 +448,8 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<!-- Sistema Multi-tenant API Utils -->
+<script src="../js/utils/api-utils.js"></script>
+
 </body>
 </html>
