arreglando la visual del cesium

--- a/templates/parcels/parcels-dashboard.html
+++ b/templates/parcels/parcels-dashboard.html
@@ -1047,8 +1047,11 @@
     </script>
 
 <!-- Scripts -->
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.102/Build/Cesium/Cesium.js"></script>
+    <!-- Cesium 1.118 ya está cargado arriba, no duplicar -->
     <script>
+        // Configurar ruta base para workers de Cesium
+        window.CESIUM_BASE_URL = 'https://cesium.com/downloads/cesiumjs/releases/1.118/Build/Cesium/';
+        
         // Configurar token de Cesium Ion - Agrotech
         Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI4MDYwOTcwMy1mMTRlLTQxMTYtYWRmNi02OTY4YjZkNjI0YWQiLCJpZCI6MjkwMzgyLCJpYXQiOjE3NTM1NDAzNTJ9.qZvwbfLRYsWlXHqxsePXVRfv87tF_0IIr6_Ch6efdF8';
     </script>
