--- a/templates/partials/left-sidebar.html
+++ b/templates/partials/left-sidebar.html
@@ -118,7 +118,7 @@
             <li><a href="../employees/RRHH-dashboard.html"><i class="ti ti-user"></i> Recursos Humanos</a></li>
             <li><a href="../inventario/dashboard_inventario.html"><i class="ti ti-box"></i> Inventario</a></li>
             <li><a href="../settings.html"><i class="ti ti-settings"></i> Configuración</a></li>
-            <li><a href="parcels-dashboard.html" class="active"><i class="ti ti-map"></i> Parcelas</a></li>
+            <li><a href="parcels/parcels-dashboard.html" class="active"><i class="ti ti-map"></i> Parcelas</a></li>
             <li><a href="../labores.html"><i class="fa fa-tasks"></i> Labores</a></li>
             <li><a href="../crop/crop_list.html"><i class="fa fa-tasks"></i> Cultivos</a></li>
         </ul>
