arreglando el csp de cesium

--- a/templates/partials/left-sidebar.html
+++ b/templates/partials/left-sidebar.html
@@ -108,7 +108,7 @@
         <div class="brand">
             <a href="#" class="logo">
                 <span>
-                    <img src="/static/images/agrotech solo blanco.png" alt="logo-small" class="logo-sm">
+                    <img src="../static/images/agrotech solo blanco.png" alt="logo-small" class="logo-sm">
                 </span>
             </a>
         </div>
