--- a/templates/parcels/parcels-dashboard.html
+++ b/templates/parcels/parcels-dashboard.html
@@ -10,7 +10,7 @@
                    font-src 'self' 'unsafe-inline' https: data:; 
                    img-src 'self' 'unsafe-inline' https: data: blob:; 
                    connect-src 'self' 'unsafe-inline' https: data: blob:; 
-                   worker-src 'self' 'unsafe-eval' 'unsafe-inline' https: data: blob:; 
+                   worker-src 'self' 'unsafe-eval' 'unsafe-inline' https: data: blob: https://cesium.com; 
                    child-src 'self' 'unsafe-eval' 'unsafe-inline' https: data: blob:;">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa 3D Cesium - AgroTech</title>
