--- a/templates/parcels/parcels-dashboard.html
+++ b/templates/parcels/parcels-dashboard.html
@@ -25,7 +25,7 @@
     <!-- Font Awesome for Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- Tabler Icons for Sidebar -->
-    <link href="https://cdn.jsdelivr.net/npm/@tabler/icons@latest/tabler-sprite.svg" rel="preload" as="image">
+    <link href="https://cdn.jsdelivr.net/npm/@tabler/icons@latest/tabler-sprite.svg" as="image">
     <link href="https://unpkg.com/@tabler/icons-webfont@latest/tabler-icons.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
